tests/NormalTests/paczka1/small_fuzzy/87147171.err
Error in line 4: CEXKjrmrVr S708 5,1
Error in line 5: CEXKjrmrVr S159 7,0
